[package]
name = "neural-search-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.71"
qdrant-client = "1.2.1"
tokio = { version = "1.28.2", features = ["rt-multi-thread"] }
tonic = "0.9.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
npyz = "0.8"
